--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.16.7",
     "axios": "^1.7.3",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-slick": "^0.30.2",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
